--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <nav class="navbar" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="https://wgpu.rs/">
-                        <img src="https://wgpu.rs/logo.png">
+                        <img src="https://wgpu.rs/logo.svg">
                     </a>
 
                     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -130,7 +130,7 @@
             <div class="container">
                 <div class="columns">
                     <div class="column is-4 px-6">
-                        <img src="https://wgpu.rs/logo.png">
+                        <img src="https://wgpu.rs/logo.svg">
                     </div>
                     <div class="column px-6">
                         <h1 class="title is-1 pb-6">
