Put blub fluid solver (back) to the showcase page

--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@
                     "description": "A modern 3D/2D game engine that uses wgpu",
                     "website": "https://github.com/StarArawn/harmony",
                     "thumbnail": "http://wgpu.rs/screenshots/harmony-rs.jpg"
+                },
+                {
+                    "name": "Blub",
+                    "description": "A GPU fluid solver (APIC)",
+                    "website": "https://github.com/wumpf/blub",
+                    "thumbnail": "http://wgpu.rs/screenshots/blub-fluid.gif"
                 }
             ]
         }
