Refactor showcase section by using local links, changing order, and adding a few entries.

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
     <!-- Showcase Projects -->
     <section class="section is-medium">
         <div class="container">
-            <h1 class="title is-1">Showcase</h1>
+            <h1 class="title is-1"><a name="showcase">#</a> Showcase</h1>
             <br>
-            <p class="subtitle is-4">Made something cool with <b>wgpu-rs</b>? Contact us of you want it to be listed here!</p>
+            <p class="subtitle is-4">Made something cool with <b>wgpu-rs</b>? Make a PR to <a href="https://github.com/gfx-rs/wgpu-rs.github.io">wgpu-rs.github.io</a>, and reach out to us on <a href="https://matrix.to/#/#wgpu-users:matrix.org">#wgpu-users</a>!</p>
             <br>
 
             <div id="showcase_container"></div>
@@ -195,46 +195,58 @@
         var showcase_list = {
             "list": [
                 {
-                    "name": "wgpu-rs",
-                    "description": "Cube example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/cube",
-                    "thumbnail": "http://wgpu.rs/screenshots/example-cube.png"
-                },
-                {
-                    "name": "wgpu-rs",
-                    "description": "Mipmap example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/mipmap",
-                    "thumbnail": "http://wgpu.rs/screenshots/example-mipmap.png"
-                },
-                {
-                    "name": "wgpu-rs",
-                    "description": "Shadow example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/shadow",
-                    "thumbnail": "http://wgpu.rs/screenshots/example-shadow.png"
-                },
-                {
-                    "name": "wgpu-rs",
-                    "description": "Skybox example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/skybox",
-                    "thumbnail": "http://wgpu.rs/screenshots/example-skybox.gif"
-                },
-                {
                     "name": "Vange-rs",
                     "description": "Rusty Vangers clone",
                     "website": "https://github.com/kvark/vange-rs",
-                    "thumbnail": "http://wgpu.rs/screenshots/vange-rs.png"
+                    "thumbnail": "screenshots/vange-rs.png"
                 },
                 {
                     "name": "Harmony",
                     "description": "A modern 3D/2D game engine that uses wgpu",
                     "website": "https://github.com/StarArawn/harmony",
-                    "thumbnail": "http://wgpu.rs/screenshots/harmony-rs.jpg"
+                    "thumbnail": "screenshots/harmony-rs.jpg"
                 },
                 {
                     "name": "Blub",
                     "description": "A GPU fluid solver (APIC)",
                     "website": "https://github.com/wumpf/blub",
-                    "thumbnail": "http://wgpu.rs/screenshots/blub-fluid.gif"
+                    "thumbnail": "screenshots/blub-fluid.gif"
+                },
+                {
+                    "name": "Brawlib",
+                    "description": "Brawl file parser",
+                    "website": "https://github.com/rukai/brawllib_rs",
+                    "thumbnail": "screenshots/brawl-attack.gif"
+                },
+                {
+                    "name": "GLX",
+                    "description": "OpenStreetMap renderer",
+                    "website": "https://github.com/paulkernfeld/glx",
+                    "thumbnail": "screenshots/glx-map.png"
+                },
+                {
+                    "name": "wgpu-rs",
+                    "description": "Cube example",
+                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/cube",
+                    "thumbnail": "screenshots/example-cube.png"
+                },
+                {
+                    "name": "wgpu-rs",
+                    "description": "Mipmap example",
+                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/mipmap",
+                    "thumbnail": "screenshots/example-mipmap.png"
+                },
+                {
+                    "name": "wgpu-rs",
+                    "description": "Shadow example",
+                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/shadow",
+                    "thumbnail": "screenshots/example-shadow.png"
+                },
+                {
+                    "name": "wgpu-rs",
+                    "description": "Skybox example",
+                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/skybox",
+                    "thumbnail": "screenshots/example-skybox.gif"
                 }
             ]
         }
