Add goeld, hectic, richter, scale, and tuitui work to the showcase

--- a/index.html
+++ b/index.html
@@ -225,6 +225,36 @@
                     "thumbnail": "screenshots/glx-map.png"
                 },
                 {
+                    "name": "grass field",
+                    "description": "TuiTui's everyday experiements",
+                    "website": "https://www.instagram.com/mactuitui/",
+                    "thumbnail": "screenshots/tuitui-grass-field.png"
+                },
+                {
+                    "name": "Hectic-rs",
+                    "description": "Hectic rewrite in Rust",
+                    "website": "https://github.com/expenses/hectic-rs",
+                    "thumbnail": "screenshots/hectic.png"
+                },
+                {
+                    "name": "Richter",
+                    "description": "Quake engine in Rust",
+                    "website": "https://github.com/cormac-obrien/richter",
+                    "thumbnail": "screenshots/richter.png"
+                },
+                {
+                    "name": "Göld",
+                    "description": "Löve but for Goldsrc",
+                    "website": "https://github.com/Vurich/goeld",
+                    "thumbnail": "screenshots/goeld.png"
+                },
+                {
+                    "name": "Scale",
+                    "description": "Society simulator",
+                    "website": "https://github.com/Uriopass/Scale",
+                    "thumbnail": "screenshots/scale.png"
+                },
+                {
                     "name": "wgpu-rs",
                     "description": "Cube example",
                     "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/cube",
