--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@
                     "thumbnail": "screenshots/scale.png"
                 },
                 {
+                    "name": "Sandbox",
+                    "description": "Falling sand game",
+                    "website": "https://github.com/JMS55/sandbox",
+                    "thumbnail": "screenshots/sandbox.png"
+                },
+                {
                     "name": "wgpu-rs",
                     "description": "Cube example",
                     "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/cube",
