Add the water example

--- a/index.html
+++ b/index.html
@@ -262,6 +262,18 @@
                 },
                 {
                     "name": "wgpu-rs",
+                    "description": "Water example",
+                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/water",
+                    "thumbnail": "screenshots/example-water.gif"
+                },
+                {
+                    "name": "wgpu-rs",
+                    "description": "Shadow example",
+                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/shadow",
+                    "thumbnail": "screenshots/example-shadow.png"
+                },
+                {
+                    "name": "wgpu-rs",
                     "description": "Cube example",
                     "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/cube",
                     "thumbnail": "screenshots/example-cube.png"
@@ -271,12 +283,6 @@
                     "description": "Mipmap example",
                     "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/mipmap",
                     "thumbnail": "screenshots/example-mipmap.png"
-                },
-                {
-                    "name": "wgpu-rs",
-                    "description": "Shadow example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/shadow",
-                    "thumbnail": "screenshots/example-shadow.png"
                 },
                 {
                     "name": "wgpu-rs",
