--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
                     "thumbnail": "screenshots/glx-map.png"
                 },
                 {
+                    "name": "Neothesia",
+                    "description": "Cross-platform GPU accelerated midi visualizer",
+                    "website": "https://github.com/PolyMeilex/Neothesia",
+                    "thumbnail": "screenshots/neothesia.gif"
+                },
+                {
                     "name": "grass field",
                     "description": "TuiTui's everyday experiements",
                     "website": "https://www.instagram.com/mactuitui/",
