--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
                     "thumbnail": "screenshots/goeld.png"
                 },
                 {
-                    "name": "Scale",
+                    "name": "Egregoria",
                     "description": "Society simulator",
-                    "website": "https://github.com/Uriopass/Scale",
-                    "thumbnail": "screenshots/scale.png"
+                    "website": "https://github.com/Uriopass/Egregoria",
+                    "thumbnail": "screenshots/egregoria.png"
                 },
                 {
                     "name": "Sandbox",
