Add Terra to showcase

--- a/index.html
+++ b/index.html
@@ -267,6 +267,12 @@
                     "thumbnail": "screenshots/sandbox.png"
                 },
                 {
+                    "name": "Terra",
+                    "description": "Planet rendering library",
+                    "website": "https://github.com/fintelia/terra",
+                    "thumbnail": "screenshots/terra.jpg"
+                },
+                {
                     "name": "wgpu-rs",
                     "description": "Water example",
                     "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/water",
