add ampli-Fe to showcase

--- a/index.html
+++ b/index.html
@@ -273,6 +273,12 @@
                     "thumbnail": "screenshots/terra.jpg"
                 },
                 {
+                    "name": "ampli-Fe",
+                    "description": "Fully cross-platform VST2 plugin UI",
+                    "website": "https://github.com/antonok-edm/ampli-Fe",
+                    "thumbnail": "screenshots/ampli-Fe.jpg"
+                },
+                {
                     "name": "wgpu-rs",
                     "description": "Water example",
                     "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/water",
