Replaced Handlebars with template literals.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"
         integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg=="
         crossorigin="anonymous"></script>
-
-    <!-- Handlebars Templating System -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"
-        integrity="sha512-zT3zHcFYbQwjHdKjCu6OMmETx8fJA9S7E6W7kBeFxultf75OPTYUJigEKX58qgyQMi1m1EgenfjMXlRZG8BXaw=="
-        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -311,25 +306,26 @@
             ]
         }
 
-        // compile the template
-        var showcase_template = Handlebars.compile(`
+        // Showcase Card Template
+        const showcase_template = ({name, description, website, thumbnail}) => {
+            return `
             <div class="column">
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
-                            <img src="{{thumbnail}}">
+                            <img src="${thumbnail}">
                         </figure>
                     </div>
                     <div class="card-content">
                         <div class="media">
                             <div class="media-content">
-                                <p class="title is-4">{{name}}</p>
-                                <p class="subtitle is-6">{{description}}</p>
+                                <p class="title is-4">${name}</p>
+                                <p class="subtitle is-6">${description}</p>
                             </div>
                         </div>
                     </div>
                     <footer class="card-footer">
-                        <a href="{{website}}" class="card-footer-item">
+                        <a href="${website}" class="card-footer-item">
                         <span class="icon">
                         <i class="fas fa-external-link-alt"></i>
                         </span>
@@ -337,7 +333,8 @@
                     </footer>
                 </div>
             </div>
-            `);
+            `;
+        }
 
         var showcase_container = document.getElementById("showcase_container");
 
