Utilizing CSS grid templates for the showcase section.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"
         integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg=="
         crossorigin="anonymous"></script>
+
+    <style>
+        #showcase_container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+            gap: 3rem;
+            align-items: start;
+        }
+    </style>
 </head>
 
 <body>
@@ -187,208 +196,160 @@
 
     <script>
         // List of showcase projects; Edit this list to add or remove projects
-        var showcase_list = {
-            "list": [
-                {
-                    "name": "Vange-rs",
-                    "description": "Rusty Vangers clone",
-                    "website": "https://github.com/kvark/vange-rs",
-                    "thumbnail": "screenshots/vange-rs.png"
-                },
-                {
-                    "name": "Harmony",
-                    "description": "A modern 3D/2D game engine that uses wgpu",
-                    "website": "https://github.com/StarArawn/harmony",
-                    "thumbnail": "screenshots/harmony-rs.jpg"
-                },
-                {
-                    "name": "Blub",
-                    "description": "A GPU fluid solver (APIC)",
-                    "website": "https://github.com/wumpf/blub",
-                    "thumbnail": "screenshots/blub-fluid.gif"
-                },
-                {
-                    "name": "Brawlib",
-                    "description": "Brawl file parser",
-                    "website": "https://github.com/rukai/brawllib_rs",
-                    "thumbnail": "screenshots/brawl-attack.gif"
-                },
-                {
-                    "name": "GLX",
-                    "description": "OpenStreetMap renderer",
-                    "website": "https://github.com/paulkernfeld/glx",
-                    "thumbnail": "screenshots/glx-map.png"
-                },
-                {
-                    "name": "Neothesia",
-                    "description": "Cross-platform GPU accelerated midi visualizer",
-                    "website": "https://github.com/PolyMeilex/Neothesia",
-                    "thumbnail": "screenshots/neothesia.gif"
-                },
-                {
-                    "name": "grass field",
-                    "description": "TuiTui's everyday experiements",
-                    "website": "https://www.instagram.com/mactuitui/",
-                    "thumbnail": "screenshots/tuitui-grass-field.png"
-                },
-                {
-                    "name": "Hectic-rs",
-                    "description": "Hectic rewrite in Rust",
-                    "website": "https://github.com/expenses/hectic-rs",
-                    "thumbnail": "screenshots/hectic.png"
-                },
-                {
-                    "name": "Richter",
-                    "description": "Quake engine in Rust",
-                    "website": "https://github.com/cormac-obrien/richter",
-                    "thumbnail": "screenshots/richter.png"
-                },
-                {
-                    "name": "Göld",
-                    "description": "Löve but for Goldsrc",
-                    "website": "https://github.com/Vurich/goeld",
-                    "thumbnail": "screenshots/goeld.png"
-                },
-                {
-                    "name": "Egregoria",
-                    "description": "Society simulator",
-                    "website": "https://github.com/Uriopass/Egregoria",
-                    "thumbnail": "screenshots/egregoria.png"
-                },
-                {
-                    "name": "Sandbox",
-                    "description": "Falling sand game",
-                    "website": "https://github.com/JMS55/sandbox",
-                    "thumbnail": "screenshots/sandbox.png"
-                },
-                {
-                    "name": "Terra",
-                    "description": "Planet rendering library",
-                    "website": "https://github.com/fintelia/terra",
-                    "thumbnail": "screenshots/terra.jpg"
-                },
-                {
-                    "name": "ampli-Fe",
-                    "description": "Fully cross-platform VST2 plugin UI",
-                    "website": "https://github.com/antonok-edm/ampli-Fe",
-                    "thumbnail": "screenshots/ampli-Fe.jpg"
-                },
-                {
-                    "name": "wgpu-rs",
-                    "description": "Water example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/water",
-                    "thumbnail": "screenshots/example-water.gif"
-                },
-                {
-                    "name": "wgpu-rs",
-                    "description": "Shadow example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/shadow",
-                    "thumbnail": "screenshots/example-shadow.png"
-                },
-                {
-                    "name": "wgpu-rs",
-                    "description": "Cube example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/cube",
-                    "thumbnail": "screenshots/example-cube.png"
-                },
-                {
-                    "name": "wgpu-rs",
-                    "description": "Mipmap example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/mipmap",
-                    "thumbnail": "screenshots/example-mipmap.png"
-                },
-                {
-                    "name": "wgpu-rs",
-                    "description": "Skybox example",
-                    "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/skybox",
-                    "thumbnail": "screenshots/example-skybox.gif"
-                }
-            ]
-        }
+        const showcase_list = [
+            {
+                "name": "Vange-rs",
+                "description": "Rusty Vangers clone",
+                "website": "https://github.com/kvark/vange-rs",
+                "thumbnail": "screenshots/vange-rs.png"
+            },
+            {
+                "name": "Harmony",
+                "description": "A modern 3D/2D game engine that uses wgpu",
+                "website": "https://github.com/StarArawn/harmony",
+                "thumbnail": "screenshots/harmony-rs.jpg"
+            },
+            {
+                "name": "Blub",
+                "description": "A GPU fluid solver (APIC)",
+                "website": "https://github.com/wumpf/blub",
+                "thumbnail": "screenshots/blub-fluid.gif"
+            },
+            {
+                "name": "Brawlib",
+                "description": "Brawl file parser",
+                "website": "https://github.com/rukai/brawllib_rs",
+                "thumbnail": "screenshots/brawl-attack.gif"
+            },
+            {
+                "name": "GLX",
+                "description": "OpenStreetMap renderer",
+                "website": "https://github.com/paulkernfeld/glx",
+                "thumbnail": "screenshots/glx-map.png"
+            },
+            {
+                "name": "Neothesia",
+                "description": "Cross-platform GPU accelerated midi visualizer",
+                "website": "https://github.com/PolyMeilex/Neothesia",
+                "thumbnail": "screenshots/neothesia.gif"
+            },
+            {
+                "name": "grass field",
+                "description": "TuiTui's everyday experiements",
+                "website": "https://www.instagram.com/mactuitui/",
+                "thumbnail": "screenshots/tuitui-grass-field.png"
+            },
+            {
+                "name": "Hectic-rs",
+                "description": "Hectic rewrite in Rust",
+                "website": "https://github.com/expenses/hectic-rs",
+                "thumbnail": "screenshots/hectic.png"
+            },
+            {
+                "name": "Richter",
+                "description": "Quake engine in Rust",
+                "website": "https://github.com/cormac-obrien/richter",
+                "thumbnail": "screenshots/richter.png"
+            },
+            {
+                "name": "Göld",
+                "description": "Löve but for Goldsrc",
+                "website": "https://github.com/Vurich/goeld",
+                "thumbnail": "screenshots/goeld.png"
+            },
+            {
+                "name": "Egregoria",
+                "description": "Society simulator",
+                "website": "https://github.com/Uriopass/Egregoria",
+                "thumbnail": "screenshots/egregoria.png"
+            },
+            {
+                "name": "Sandbox",
+                "description": "Falling sand game",
+                "website": "https://github.com/JMS55/sandbox",
+                "thumbnail": "screenshots/sandbox.png"
+            },
+            {
+                "name": "Terra",
+                "description": "Planet rendering library",
+                "website": "https://github.com/fintelia/terra",
+                "thumbnail": "screenshots/terra.jpg"
+            },
+            {
+                "name": "ampli-Fe",
+                "description": "Fully cross-platform VST2 plugin UI",
+                "website": "https://github.com/antonok-edm/ampli-Fe",
+                "thumbnail": "screenshots/ampli-Fe.jpg"
+            },
+            {
+                "name": "wgpu-rs",
+                "description": "Water example",
+                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/water",
+                "thumbnail": "screenshots/example-water.gif"
+            },
+            {
+                "name": "wgpu-rs",
+                "description": "Shadow example",
+                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/shadow",
+                "thumbnail": "screenshots/example-shadow.png"
+            },
+            {
+                "name": "wgpu-rs",
+                "description": "Cube example",
+                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/cube",
+                "thumbnail": "screenshots/example-cube.png"
+            },
+            {
+                "name": "wgpu-rs",
+                "description": "Mipmap example",
+                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/mipmap",
+                "thumbnail": "screenshots/example-mipmap.png"
+            },
+            {
+                "name": "wgpu-rs",
+                "description": "Skybox example",
+                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/skybox",
+                "thumbnail": "screenshots/example-skybox.gif"
+            }
+        ];
 
         // Showcase Card Template
         const showcase_template = ({name, description, website, thumbnail}) => {
             return `
-            <div class="column">
-                <div class="card">
-                    <div class="card-image">
-                        <figure class="image is-4by3">
-                            <img src="${thumbnail}">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4">${name}</p>
-                                <p class="subtitle is-6">${description}</p>
-                            </div>
+            <div class="card">
+                <div class="card-image">
+                    <figure class="image is-4by3">
+                        <img src="${thumbnail}">
+                    </figure>
+                </div>
+                <div class="card-content">
+                    <div class="media">
+                        <div class="media-content">
+                            <p class="title is-4">${name}</p>
+                            <p class="subtitle is-6">${description}</p>
                         </div>
                     </div>
-                    <footer class="card-footer">
-                        <a href="${website}" class="card-footer-item">
-                        <span class="icon">
-                        <i class="fas fa-external-link-alt"></i>
-                        </span>
-                        <span>Visit Project Website</span></a>
-                    </footer>
                 </div>
+                <footer class="card-footer">
+                    <a href="${website}" class="card-footer-item">
+                    <span class="icon">
+                    <i class="fas fa-external-link-alt"></i>
+                    </span>
+                    <span>Visit Project Website</span></a>
+                </footer>
             </div>
             `;
         }
 
-        var showcase_container = document.getElementById("showcase_container");
+        const showcase_container = document.getElementById("showcase_container");
 
-        // Create multiple rows, with a maximum of 3 columns (cards) per row
-        for (i = 0; i < Math.floor(showcase_list.list.length / 3); i++) {
-            var columns_parent = document.createElement("div");
-            columns_parent.setAttribute("class", "columns");
-
-            for (j = 0; j < 3; j++) {
-                var column_child = document.createElement("div");
-                column_child.setAttribute("class", "column is-4");
-
-                var showcase_item = showcase_list.list[i * 3 + j];
-
-                var new_card = showcase_template({
-                    name: showcase_item.name,
-                    description: showcase_item.description,
-                    website: showcase_item.website,
-                    thumbnail: showcase_item.thumbnail
-                });
-
-                column_child.insertAdjacentHTML("beforeend", new_card);
-
-                columns_parent.appendChild(column_child);
-            }
-
-            showcase_container.appendChild(columns_parent);
-        }
-
-        // Handle the rest
-        {
-            var columns_parent = document.createElement("div");
-            columns_parent.setAttribute("class", "columns");
-
-            for (i = 0; i < showcase_list.list.length % 3; i++) {
-                var column_child = document.createElement("div");
-                column_child.setAttribute("class", "column is-4");
-
-                var index_offset = 3 * Math.floor(showcase_list.list.length / 3)
-                var showcase_item = showcase_list.list[index_offset + i];
-
-                var new_card = showcase_template({
-                    name: showcase_item.name,
-                    description: showcase_item.description,
-                    website: showcase_item.website,
-                    thumbnail: showcase_item.thumbnail
-                });
-
-                column_child.insertAdjacentHTML("beforeend", new_card);
-
-                columns_parent.appendChild(column_child);
-            }
-
-            showcase_container.appendChild(columns_parent);
+        for (let {name, description, website, thumbnail} of showcase_list) {
+            showcase_container.insertAdjacentHTML("beforeend", showcase_template({
+                    name,
+                    description,
+                    website,
+                    thumbnail
+                }));
         }
     </script>
 </body>
