Compressed the logo using svgcleaner utility.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <nav class="navbar" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="https://wgpu.rs/">
-                        <img src="logo.svg">
+                        <img src="logo.min.svg">
                     </a>
 
                     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -134,7 +134,7 @@
             <div class="container">
                 <div class="columns">
                     <div class="column is-4 px-6">
-                        <img src="logo.svg">
+                        <img src="logo.min.svg">
                     </div>
                     <div class="column px-6">
                         <h1 class="title is-1 pb-6">
