Lazy load images to improve initial load time.

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <div class="card">
                 <div class="card-image">
                     <figure class="image is-4by3">
-                        <img src="${thumbnail}">
+                        <img src="${thumbnail}" loading="lazy">
                     </figure>
                 </div>
                 <div class="card-content">
