Using WebP format to save more bandwidth on modern web browsers.
- Compressed gif files using https://ezgif.com/gif-to-webp
  (Compression mode set to mixed)

- Compressed still images using https://compress-or-die.com/webp
  (Compression mode set to 90% lossy)

--- a/index.html
+++ b/index.html
@@ -315,12 +315,18 @@
 
         // Showcase Card Template
         const showcase_template = ({name, description, website, thumbnail}) => {
+            // Providing fallback formats for Safari
+            const file_ext_pos = thumbnail.lastIndexOf(".");
+            const file_name = thumbnail.slice(0, file_ext_pos);
+            const thumbnail_webp = `${file_name}.webp`;
+
             return `
             <div class="card">
                 <div class="card-image">
-                    <figure class="image is-4by3">
+                    <picture class="image is-4by3">
+                        <source srcset="${thumbnail_webp}">
                         <img src="${thumbnail}" loading="lazy">
-                    </figure>
+                    </picture>
                 </div>
                 <div class="card-content">
                     <div class="media">
