Slightly increased the navigation-bar logo size.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         crossorigin="anonymous"></script>
 
     <style>
+        #navbar-brand-img {
+            max-height: 3rem;
+        }
+
         #showcase_container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
@@ -35,7 +39,7 @@
             <nav class="navbar" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="https://wgpu.rs/">
-                        <img src="logo.min.svg">
+                        <img id="navbar-brand-img" src="logo.min.svg">
                     </a>
 
                     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
