Hide some examples for now

--- a/examples/index.html
+++ b/examples/index.html
@@ -53,18 +53,20 @@
     </div>
     <script type="module">
       const exampleNames = [
+        // Certain examples are hidden for now
         "boids",
-        // Hidden for now
         // "capture",
         "cube",
-        // Hidden for now
-        // "describe",
+        // "hello",
         "hello-compute",
         "hello-triangle",
+        // "hello-windows",
         "mipmap",
-        "msaa-line",
+        // "msaa-line",
         "shadow",
         "skybox",
+        // "texture-arrays",
+        // "water",
       ];
       const list = document.createElement("ul");
       for (let exampleName of exampleNames) {
