Add Dotrix skeletal animation example

--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
         // List of showcase projects; Edit this list to add or remove projects
         const showcase_list = [
             {
+                "name": "Dotrix",
+                "description": "Skeletal Animation Example of a 3D game engine",
+                "website": "https://github.com/lowenware/dotrix",
+                "thumbnail": "screenshots/dotrix-skeletal.gif",
+            },
+            {
                 "name": "Vange-rs",
                 "description": "Rusty Vangers clone",
                 "website": "https://github.com/kvark/vange-rs",
