Add nbodysim to showcase

--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
         // List of showcase projects; Edit this list to add or remove projects
         const showcase_list = [
             {
+                "name": "nbodysim",
+                "description": "Realtime 3D N-Body-Simulation",
+                "website": "https://github.com/timokoesters/nbodysim",
+                "thumbnail": "screenshots/nbodysim.gif",
+            },
+            {
                 "name": "Dotrix",
                 "description": "Skeletal Animation Example of a 3D game engine",
                 "website": "https://github.com/lowenware/dotrix",
