Add Bevy to Showcase

--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
         // List of showcase projects; Edit this list to add or remove projects
         const showcase_list = [
             {
+                "name": "bevy",
+                "description": "Bevy",
+                "website": "https://bevyengine.org/",
+                "thumbnail": "screenshots/bevy.gif",
+            },
+            {
                 "name": "nbodysim",
                 "description": "Realtime 3D N-Body-Simulation",
                 "website": "https://github.com/timokoesters/nbodysim",
