Fix outdated wgpu-rs links

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     </span>
                                     <span>Crates.io</span>
                                 </a>
-                                <a class="navbar-item" href="https://github.com/gfx-rs/wgpu-rs">
+                                <a class="navbar-item" href="https://github.com/gfx-rs/wgpu">
                                     <span class="icon">
                                         <i class="fab fa-github"></i>
                                     </span>
@@ -118,7 +118,7 @@
                     <div class="navbar-end">
                         <div class="navbar-item">
                             <div class="buttons">
-                                <a class="button is-light" href="https://github.com/gfx-rs/wgpu-rs">
+                                <a class="button is-light" href="https://github.com/gfx-rs/wgpu">
                                     <span class="icon">
                                         <i class="fab fa-github"></i>
                                     </span>
@@ -306,31 +306,31 @@
             {
                 "name": "wgpu-rs",
                 "description": "Water example",
-                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/water",
+                "website": "https://github.com/gfx-rs/wgpu/tree/master/wgpu/examples/water",
                 "thumbnail": "screenshots/example-water.gif"
             },
             {
                 "name": "wgpu-rs",
                 "description": "Shadow example",
-                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/shadow",
+                "website": "https://github.com/gfx-rs/wgpu/tree/master/wgpu/examples/shadow",
                 "thumbnail": "screenshots/example-shadow.png"
             },
             {
                 "name": "wgpu-rs",
                 "description": "Cube example",
-                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/cube",
+                "website": "https://github.com/gfx-rs/wgpu/tree/master/wgpu/examples/cube",
                 "thumbnail": "screenshots/example-cube.png"
             },
             {
                 "name": "wgpu-rs",
                 "description": "Mipmap example",
-                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/mipmap",
+                "website": "https://github.com/gfx-rs/wgpu/tree/master/wgpu/examples/mipmap",
                 "thumbnail": "screenshots/example-mipmap.png"
             },
             {
                 "name": "wgpu-rs",
                 "description": "Skybox example",
-                "website": "https://github.com/gfx-rs/wgpu-rs/tree/master/examples/skybox",
+                "website": "https://github.com/gfx-rs/wgpu/tree/master/wgpu/examples/skybox",
                 "thumbnail": "screenshots/example-skybox.gif"
             }
         ];
