Fix fix typo in desc

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             },
             {
                 "name": "grass field",
-                "description": "TuiTui's everyday experiements",
+                "description": "TuiTui's everyday experiments",
                 "website": "https://www.instagram.com/mactuitui/",
                 "thumbnail": "screenshots/tuitui-grass-field.png"
             },
